--- a/admin-medicos.html
+++ b/admin-medicos.html
@@ -116,6 +116,11 @@
                   <i class="bi bi-people me-2"></i>Usuarios
                 </a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">
+                  <i class="bi bi-box-arrow-up-right me-2"></i>Ver sitio
+                </a>
+              </li>
             </ul>
           </div>
         </div>
