agrega turnos y reservas

--- a/admin-medicos.html
+++ b/admin-medicos.html
@@ -103,12 +103,7 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">
-                  <i class="bi bi-calendar-check me-2"></i>Turnos
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">
-                  <i class="bi bi-journal-check me-2"></i>Reservas
+                  <i class="bi bi-calendar-check me-2"></i>Turnos y reservas
                 </a>
               </li>
               <li class="nav-item">
