--- a/contacto.html
+++ b/contacto.html
@@ -253,7 +253,7 @@
     <script src="js/contacto.js"></script>
 
     <!-- JS login -->
-    <script type="module" src="js/login/login.js"></script>
+    <script type="module" src="js/login.js"></script>
 </body>
 
 </html>
