--- a/contacto.html
+++ b/contacto.html
@@ -218,7 +218,7 @@
         <div class="container">
             <div class="row gy-3 align-items-center">
                 <div class="col-12">
-                    <p class="m-0 fw-bold small">© 2025 IDW S.A. · Proyecto académico (tercera entrega)</p>
+                    <p class="m-0 fw-bold small">© 2025 IDW S.A. · Proyecto académico (entrega final)</p>
                 </div>
 
                 <div class="col-12">
