--- a/usuarios.html
+++ b/usuarios.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin · Obras Sociales</title>
+    <title>Usuarios</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link
@@ -65,7 +65,7 @@
           </li>
           <li class="nav-item">
             <a
-              class="nav-link active"
+              class="nav-link"
               href="admin-obras-sociales.html"
               data-bs-dismiss="offcanvas"
             >
@@ -83,7 +83,7 @@
           </li>
           <li class="nav-item">
             <a
-              class="nav-link"
+              class="nav-link active"
               href="usuarios.html"
               data-bs-dismiss="offcanvas"
             >
@@ -130,7 +130,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="admin-obras-sociales.html">
+                    <a class="nav-link" href="admin-obras-sociales.html">
                       <i class="bi bi-shield-plus me-2"></i>Obras sociales
                     </a>
                   </li>
@@ -140,7 +140,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="usuarios.html">
+                    <a class="nav-link active" href="usuarios.html">
                       <i class="bi bi-people me-2"></i>Usuarios
                     </a>
                   </li>
@@ -156,54 +156,32 @@
 
           <!-- Contenido -->
           <main class="col-12 col-md-9 col-lg-10 p-3">
-            <h1 class="h3">Obras Sociales</h1>
+            <h1 class="mb-4 text-center">Base de Usuarios</h1>
+            <hr />
 
-            <form id="formObraSocial" class="row g-3">
-              <div class="col-md-4">
-                <label class="form-label" for="obraNombre">Nombre</label>
-                <input id="obraNombre" class="form-control" required />
+            <div class="card shadow">
+              <div class="card-header bg-success text-white">
+                <h4 class="m-0">Usuarios Registrados en el Sistema</h4>
               </div>
-              <div class="col-md-5">
-                <label class="form-label" for="obraDescripcion"
-                  >Descripción</label
-                >
-                <input
-                  id="obraDescripcion"
-                  class="form-control"
-                  placeholder="Ej.: Obra Social de Ejecutivos"
-                />
+              <div class="card-body">
+                <div class="table-responsive">
+                  <table
+                    id="tablaUsuarios"
+                    class="table table-striped table-hover align-middle"
+                  >
+                    <thead>
+                      <tr>
+                        <th>Nombre</th>
+                        <th>Apellido</th>
+                        <th>Usuario</th>
+                        <th>Email</th>
+                        <th>Teléfono</th>
+                      </tr>
+                    </thead>
+                    <tbody></tbody>
+                  </table>
+                </div>
               </div>
-              <div class="col-md-3">
-                <label class="form-label" for="obraCobertura"
-                  >Cobertura (%)</label
-                >
-                <input
-                  id="obraCobertura"
-                  type="number"
-                  class="form-control"
-                  min="0"
-                  max="100"
-                  value="80"
-                  required
-                />
-              </div>
-              <div class="col-12 text-end">
-                <button class="btn btn-success">Guardar</button>
-              </div>
-            </form>
-
-            <div class="table-responsive mt-3">
-              <table class="table table-striped align-middle">
-                <thead>
-                  <tr>
-                    <th>Nombre</th>
-                    <th>Descripción</th>
-                    <th>Cobertura</th>
-                    <th class="text-end">Acciones</th>
-                  </tr>
-                </thead>
-                <tbody id="tablaObrasSociales"></tbody>
-              </table>
             </div>
           </main>
         </div>
@@ -221,6 +199,6 @@
 
     <script src="js/bootstrap.bundle.min.js" defer></script>
     <script type="module" src="js/init.js" defer></script>
-    <script src="js/admin-obras-sociales.js" defer></script>
+    <script src="js/usuarios.js" defer></script>
   </body>
 </html>
