actualiza links y footer

--- a/faq.html
+++ b/faq.html
@@ -161,17 +161,18 @@
                                                 <p class="mb-0">
                                                     Solicitá por WhatsApp, teléfono o web. También podés hacerlo ahora
                                                     mismo desde
-                                                    <a href="contacto.html"
-                                                        class="link-primary fw-semibold">Contacto</a>.
+                                                    <a href="sacar-turno.html"
+                                                        class="link-primary fw-semibold">Turnos</a>.
                                                 </p>
                                             </div>
                                             <div>
                                                 <h4 class="h6 fw-bold text-primary mb-1">¿Puedo reprogramar o cancelar
                                                     mi turno?</h4>
                                                 <p class="mb-0">
-                                                    Sí, idealmente con 24 horas de anticipación. Para gestionar cambios,
-                                                    escribinos por
-                                                    <a href="contacto.html"
+                                                    Sí, idealmente con 24 horas de anticipación. Podes autogestionarlo
+                                                    vos desde tu usuario en la sección de <a href="sacar-turno.html"
+                                                        class="link-primary fw-semibold">Turnos</a> o escribinos por <a
+                                                        href="contacto.html"
                                                         class="link-primary fw-semibold">Contacto</a>.
                                                 </p>
                                             </div>
@@ -180,8 +181,8 @@
                                                 </h4>
                                                 <p class="mb-0">
                                                     Para urgencias, sí. Para consultas, te recomendamos sacar turno en
-                                                    <a href="contacto.html"
-                                                        class="link-primary fw-semibold">Contacto</a>.
+                                                    <a href="sacar-turno.html"
+                                                        class="link-primary fw-semibold">Turnos</a>.
                                                 </p>
                                             </div>
                                         </div>
@@ -290,7 +291,7 @@
 
                         <!-- CTA final de turnos -->
                         <div class="text-center mt-4">
-                            <a href="contacto.html" class="btn btn-success fw-semibold">Reservar turno</a>
+                            <a href="sacar-turno.html" class="btn btn-success fw-semibold">Reservar turno</a>
                         </div>
                     </div>
                 </div>
@@ -303,7 +304,7 @@
         <div class="container">
             <div class="row gy-3 align-items-center">
                 <div class="col-12">
-                    <p class="m-0 fw-bold small">© 2025 IDW S.A. · Proyecto académico (tercera entrega)</p>
+                    <p class="m-0 fw-bold small">© 2025 IDW S.A. · Proyecto académico (entrega final)</p>
                 </div>
 
                 <div class="col-12">
