--- a/institucional.html
+++ b/institucional.html
@@ -277,7 +277,7 @@
         <div class="row gy-3 align-items-center">
           <div class="col-12">
             <p class="m-0 fw-bold small">
-              © 2025 IDW S.A. · Proyecto académico (tercera entrega)
+              © 2025 IDW S.A. · Proyecto académico (entrega final)
             </p>
           </div>
 
