--- a/usuarios.html
+++ b/usuarios.html
@@ -140,7 +140,7 @@
                     </a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link active" href="usuarios.html">
+                    <a class="nav-link active" href="admin-usuarios.html">
                       <i class="bi bi-people me-2"></i>Usuarios
                     </a>
                   </li>
