retoques en index y navbar

--- a/admin-medicos.html
+++ b/admin-medicos.html
@@ -54,12 +54,12 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" data-bs-dismiss="offcanvas">
+          <a class="nav-link" href="admin-obras-sociales.html" data-bs-dismiss="offcanvas">
             <i class="bi bi-shield-plus me-2"></i>Obras sociales
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" data-bs-dismiss="offcanvas">
+          <a class="nav-link" href="admin-turnos.html" data-bs-dismiss="offcanvas">
             <i class="bi bi-calendar-check me-2"></i>Turnos
           </a>
         </li>
@@ -97,12 +97,12 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="admin-obras-sociales.html">
                   <i class="bi bi-shield-plus me-2"></i>Obras sociales
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="admin-turnos.html">
                   <i class="bi bi-calendar-check me-2"></i>Turnos y reservas
                 </a>
               </li>
