--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
   <!-- estilos del proyecto -->
   <link rel="stylesheet" href="css/styles.css" />
+  <!-- bootstrap iconos -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
+
 </head>
 
 <body data-page="index">
@@ -50,15 +53,34 @@
         </li>
         <li class="nav-item"><a class="nav-link text-primary" href="contacto.html">Contacto</a></li>
         <li class="nav-item"><a class="nav-link text-primary" href="faq.html">FAQ</a></li>
-        <li id="adminMed" class="nav-item d-none"><a class="nav-link text-primary"
-            href="admin-medicos.html">Admin</a></li>
-        <li class="nav-item" id="btnInicio">
-          <button class="btn btn-success ms-2" data-bs-toggle="modal" data-bs-target="#loginModal">Iniciar
-            sesión</button>
+        <li id="btnInicio" class="nav-item">
+          <a class="nav-link" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#loginModal" title="Iniciar sesión">
+            <i class="bi bi-box-arrow-in-right fs-2 text-success"></i>
+          </a>
         </li>
-        <li class="nav-item d-none" id="btnCierre">
-          <button class="btn btn-outline-danger ms-2">Cerrar sesión</button>
-        </li>
+        <!-- menú usuario logueado -->
+         <div class="dropdown d-none" id="menuUsuario">
+          <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <i class="bi bi-person-circle text-primary fs-5 me-2"></i>
+            <span>Usuario</span>
+          </a>
+
+          <ul class="dropdown-menu dropdown-menu-end">
+            <li id="adminMed" class="d-none">
+              <a class="dropdown-item" href="admin-medicos.html">
+                <i class="bi bi-gear fs-6 text-black"></i> Panel Admin</a>
+            </li>
+            <li id="turnosDropdown" class="">
+              <a class="dropdown-item" href="sacar-turno.html">
+                <i class="bi bi-calendar-event text-black"></i> Mis turnos</a>
+            </li>
+            <li id="btnCierre">
+              <a class="dropdown-item" style="cursor: pointer;">
+                <i class="bi bi-box-arrow-right fs-6 text-danger"></i> Cerrar sesión
+              </a>
+            </li>
+          </ul>
+        </div>
       </ul>
     </div>
   </nav>
