--- a/admin-obras-sociales.html
+++ b/admin-obras-sociales.html
@@ -221,6 +221,6 @@
 
     <script src="js/bootstrap.bundle.min.js" defer></script>
     <script type="module" src="js/init.js" defer></script>
-    <script src="js/admin-obras-sociales.js" defer></script>
+    <script src="js/admin-obras-sociales.js" type="module" defer></script>
   </body>
 </html>
