--- a/admin-turnos.html
+++ b/admin-turnos.html
@@ -264,6 +264,6 @@
 
     <script src="js/bootstrap.bundle.min.js" defer></script>
     <script type="module" src="js/init.js" defer></script>
-    <script src="js/admin-turnos.js" defer></script>
+    <script src="js/admin-turnos.js" type="module" defer></script>
   </body>
 </html>
