--- a/usuarios.html
+++ b/usuarios.html
@@ -199,6 +199,6 @@
 
     <script src="js/bootstrap.bundle.min.js" defer></script>
     <script type="module" src="js/init.js" defer></script>
-    <script src="js/usuarios.js" defer></script>
+    <script src="js/usuarios.js" type="module" defer></script>
   </body>
 </html>
