--- a/usuarios.html
+++ b/usuarios.html
@@ -14,191 +14,193 @@
   </head>
 
   <body class="d-flex flex-column min-vh-100">
-    <!-- Topbar -->
-    <header class="navbar bg-white border-bottom sticky-top">
-      <div class="container-fluid">
-        <a class="navbar-brand fw-semibold m-0" href="admin-medicos.html"
-          >Clínica Vita · Admin</a
-        >
-        <button
-          class="btn btn-outline-secondary d-md-none ms-auto"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#panelMobile"
-          aria-controls="panelMobile"
-          aria-label="Abrir panel"
-        >
-          <i class="bi bi-list me-1"></i> Panel
-        </button>
-      </div>
-    </header>
-
-    <!-- Panel mobile (offcanvas) -->
-    <div
-      class="offcanvas offcanvas-start d-md-none"
-      tabindex="-1"
-      id="panelMobile"
-    >
-      <div class="offcanvas-header">
-        <h5 class="offcanvas-title">Panel</h5>
-        <button
-          type="button"
-          class="btn-close"
-          data-bs-dismiss="offcanvas"
-        ></button>
-      </div>
-      <div class="offcanvas-body">
-        <ul class="nav nav-pills flex-column gap-1">
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="admin-medicos.html"
-              data-bs-dismiss="offcanvas"
-            >
-              <i class="bi bi-person-vcard me-2"></i>Médicos
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#" data-bs-dismiss="offcanvas">
-              <i class="bi bi-hospital me-2"></i>Especialidades
-            </a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="admin-obras-sociales.html"
-              data-bs-dismiss="offcanvas"
-            >
-              <i class="bi bi-shield-plus me-2"></i>Obras sociales
-            </a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link"
-              href="admin-turnos.html"
-              data-bs-dismiss="offcanvas"
-            >
-              <i class="bi bi-calendar-check me-2"></i>Turnos y reservas
-            </a>
-          </li>
-          <li class="nav-item">
-            <a
-              class="nav-link active"
-              href="usuarios.html"
-              data-bs-dismiss="offcanvas"
-            >
-              <i class="bi bi-people me-2"></i>Usuarios
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="index.html" data-bs-dismiss="offcanvas">
-              <i class="bi bi-box-arrow-up-right me-2"></i>Ver sitio
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-
-    <!-- Wrapper -->
-    <div class="flex-grow-1">
-      <div class="container-fluid">
-        <div class="row">
-          <!-- Sidebar desktop -->
-          <nav
-            class="col-12 col-md-3 col-lg-2 d-none d-md-block bg-white border-end p-0"
+    <div id="contenido" style="display: none;">
+      <!-- Topbar -->
+      <header class="navbar bg-white border-bottom sticky-top">
+        <div class="container-fluid">
+          <a class="navbar-brand fw-semibold m-0" href="admin-medicos.html"
+            >Clínica Vita · Admin</a
           >
-            <div class="sidebar-sticky">
-              <div class="sidebar-scroll px-3 pt-3">
-                <h6
-                  id="tituloPanel"
-                  class="text-uppercase text-body-secondary mb-3"
-                >
-                  Panel
-                </h6>
-                <ul
-                  class="nav nav-pills flex-column gap-1"
-                  aria-labelledby="tituloPanel"
-                >
-                  <li class="nav-item">
-                    <a class="nav-link" href="admin-medicos.html">
-                      <i class="bi bi-person-vcard me-2"></i>Médicos
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">
-                      <i class="bi bi-hospital me-2"></i>Especialidades
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="admin-obras-sociales.html">
-                      <i class="bi bi-shield-plus me-2"></i>Obras sociales
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="admin-turnos.html">
-                      <i class="bi bi-calendar-check me-2"></i>Turnos y reservas
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="admin-usuarios.html">
-                      <i class="bi bi-people me-2"></i>Usuarios
-                    </a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="index.html">
-                      <i class="bi bi-box-arrow-up-right me-2"></i>Ver sitio
-                    </a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </nav>
+          <button
+            class="btn btn-outline-secondary d-md-none ms-auto"
+            type="button"
+            data-bs-toggle="offcanvas"
+            data-bs-target="#panelMobile"
+            aria-controls="panelMobile"
+            aria-label="Abrir panel"
+          >
+            <i class="bi bi-list me-1"></i> Panel
+          </button>
+        </div>
+      </header>
 
-          <!-- Contenido -->
-          <main class="col-12 col-md-9 col-lg-10 p-3">
-            <h1 class="mb-4 text-center">Base de Usuarios</h1>
-            <hr />
-
-            <div class="card shadow">
-              <div class="card-header bg-success text-white">
-                <h4 class="m-0">Usuarios Registrados en el Sistema</h4>
-              </div>
-              <div class="card-body">
-                <div class="table-responsive">
-                  <table
-                    id="tablaUsuarios"
-                    class="table table-striped table-hover align-middle"
-                  >
-                    <thead>
-                      <tr>
-                        <th>Nombre</th>
-                        <th>Apellido</th>
-                        <th>Usuario</th>
-                        <th>Email</th>
-                        <th>Teléfono</th>
-                      </tr>
-                    </thead>
-                    <tbody></tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-          </main>
+      <!-- Panel mobile (offcanvas) -->
+      <div
+        class="offcanvas offcanvas-start d-md-none"
+        tabindex="-1"
+        id="panelMobile"
+      >
+        <div class="offcanvas-header">
+          <h5 class="offcanvas-title">Panel</h5>
+          <button
+            type="button"
+            class="btn-close"
+            data-bs-dismiss="offcanvas"
+          ></button>
+        </div>
+        <div class="offcanvas-body">
+          <ul class="nav nav-pills flex-column gap-1">
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="admin-medicos.html"
+                data-bs-dismiss="offcanvas"
+              >
+                <i class="bi bi-person-vcard me-2"></i>Médicos
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="admin-especialidades.html" data-bs-dismiss="offcanvas">
+                <i class="bi bi-hospital me-2"></i>Especialidades
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="admin-obras-sociales.html"
+                data-bs-dismiss="offcanvas"
+              >
+                <i class="bi bi-shield-plus me-2"></i>Obras sociales
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                href="admin-turnos.html"
+                data-bs-dismiss="offcanvas"
+              >
+                <i class="bi bi-calendar-check me-2"></i>Turnos y reservas
+              </a>
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                href="usuarios.html"
+                data-bs-dismiss="offcanvas"
+              >
+                <i class="bi bi-people me-2"></i>Usuarios
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html" data-bs-dismiss="offcanvas">
+                <i class="bi bi-box-arrow-up-right me-2"></i>Ver sitio
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
 
-    <!-- Footer-->
-    <footer
-      class="mt-auto border-top py-3 text-center text-body-tertiary small"
-    >
-      <div class="container-fluid">
-        v1.0 · Proyecto académico (entrega final)
+      <!-- Wrapper -->
+      <div class="flex-grow-1">
+        <div class="container-fluid">
+          <div class="row">
+            <!-- Sidebar desktop -->
+            <nav
+              class="col-12 col-md-3 col-lg-2 d-none d-md-block bg-white border-end p-0"
+            >
+              <div class="sidebar-sticky">
+                <div class="sidebar-scroll px-3 pt-3">
+                  <h6
+                    id="tituloPanel"
+                    class="text-uppercase text-body-secondary mb-3"
+                  >
+                    Panel
+                  </h6>
+                  <ul
+                    class="nav nav-pills flex-column gap-1"
+                    aria-labelledby="tituloPanel"
+                  >
+                    <li class="nav-item">
+                      <a class="nav-link" href="admin-medicos.html">
+                        <i class="bi bi-person-vcard me-2"></i>Médicos
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="admin-especialidades.html">
+                        <i class="bi bi-hospital me-2"></i>Especialidades
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="admin-obras-sociales.html">
+                        <i class="bi bi-shield-plus me-2"></i>Obras sociales
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="admin-turnos.html">
+                        <i class="bi bi-calendar-check me-2"></i>Turnos y reservas
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link active" href="usuarios.html">
+                        <i class="bi bi-people me-2"></i>Usuarios
+                      </a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">
+                        <i class="bi bi-box-arrow-up-right me-2"></i>Ver sitio
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </nav>
+
+            <!-- Contenido -->
+            <main class="col-12 col-md-9 col-lg-10 p-3">
+              <h1 class="mb-4 text-center">Base de Usuarios</h1>
+              <hr />
+
+              <div class="card shadow">
+                <div class="card-header bg-success text-white">
+                  <h4 class="m-0">Usuarios Registrados en el Sistema</h4>
+                </div>
+                <div class="card-body">
+                  <div class="table-responsive">
+                    <table
+                      id="tablaUsuarios"
+                      class="table table-striped table-hover align-middle"
+                    >
+                      <thead>
+                        <tr>
+                          <th>Nombre</th>
+                          <th>Apellido</th>
+                          <th>Usuario</th>
+                          <th>Email</th>
+                          <th>Teléfono</th>
+                        </tr>
+                      </thead>
+                      <tbody></tbody>
+                    </table>
+                  </div>
+                </div>
+              </div>
+            </main>
+          </div>
+        </div>
       </div>
-    </footer>
 
-    <script src="js/bootstrap.bundle.min.js" defer></script>
-    <script type="module" src="js/init.js" defer></script>
-    <script src="js/usuarios.js" type="module" defer></script>
+      <!-- Footer-->
+      <footer
+        class="mt-auto border-top py-3 text-center text-body-tertiary small"
+      >
+        <div class="container-fluid">
+          v1.0 · Proyecto académico (entrega final)
+        </div>
+      </footer>
+
+      <script src="js/bootstrap.bundle.min.js" defer></script>
+      <script type="module" src="js/init.js" defer></script>
+      <script src="js/usuarios.js" type="module" defer></script>
+    </div>
   </body>
 </html>
