fix/ offcanvas, footer, estructura html obras sociales

--- a/admin-medicos.html
+++ b/admin-medicos.html
@@ -65,13 +65,12 @@
               <a
                 class="nav-link active"
                 href="admin-medicos.html"
-                data-bs-dismiss="offcanvas"
               >
                 <i class="bi bi-person-vcard me-2"></i>Médicos
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="admin-especialidades.html" data-bs-dismiss="offcanvas">
+              <a class="nav-link" href="admin-especialidades.html">
                 <i class="bi bi-hospital me-2"></i>Especialidades
               </a>
             </li>
@@ -79,7 +78,6 @@
               <a
                 class="nav-link"
                 href="admin-obras-sociales.html"
-                data-bs-dismiss="offcanvas"
               >
                 <i class="bi bi-shield-plus me-2"></i>Obras sociales
               </a>
@@ -88,7 +86,6 @@
               <a
                 class="nav-link"
                 href="admin-turnos.html"
-                data-bs-dismiss="offcanvas"
               >
                 <i class="bi bi-calendar-check me-2"></i>Turnos y reservas
               </a>
@@ -97,9 +94,13 @@
               <a
                 class="nav-link"
                 href="usuarios.html"
-                data-bs-dismiss="offcanvas"
               >
                 <i class="bi bi-people me-2"></i>Usuarios
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">
+                <i class="bi bi-box-arrow-up-right me-2"></i>Ver sitio
               </a>
             </li>
           </ul>
@@ -321,9 +322,13 @@
         </div>
       </div>
 
-      <!-- Footer -->
-      <footer class="text-body-tertiary small mt-4 pt-3 border-top text-center">
-        v1.0
+      <!-- Footer-->
+      <footer
+        class="mt-auto border-top py-3 text-center text-body-tertiary small"
+      >
+        <div class="container-fluid">
+          v1.0 · Proyecto académico (entrega final)
+        </div>
       </footer>
 
       <!-- BOOTSTRAP JS -->
