--- a/usuarios.html
+++ b/usuarios.html
@@ -54,13 +54,12 @@
               <a
                 class="nav-link"
                 href="admin-medicos.html"
-                data-bs-dismiss="offcanvas"
               >
                 <i class="bi bi-person-vcard me-2"></i>Médicos
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="admin-especialidades.html" data-bs-dismiss="offcanvas">
+              <a class="nav-link" href="admin-especialidades.html">
                 <i class="bi bi-hospital me-2"></i>Especialidades
               </a>
             </li>
@@ -68,7 +67,6 @@
               <a
                 class="nav-link"
                 href="admin-obras-sociales.html"
-                data-bs-dismiss="offcanvas"
               >
                 <i class="bi bi-shield-plus me-2"></i>Obras sociales
               </a>
@@ -77,7 +75,6 @@
               <a
                 class="nav-link"
                 href="admin-turnos.html"
-                data-bs-dismiss="offcanvas"
               >
                 <i class="bi bi-calendar-check me-2"></i>Turnos y reservas
               </a>
@@ -86,13 +83,12 @@
               <a
                 class="nav-link active"
                 href="usuarios.html"
-                data-bs-dismiss="offcanvas"
               >
                 <i class="bi bi-people me-2"></i>Usuarios
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="index.html" data-bs-dismiss="offcanvas">
+              <a class="nav-link" href="index.html">
                 <i class="bi bi-box-arrow-up-right me-2"></i>Ver sitio
               </a>
             </li>
