--- a/admin-especialidades.html
+++ b/admin-especialidades.html
@@ -33,32 +33,32 @@
             <div class="offcanvas-body">
                 <ul class="nav nav-pills flex-column gap-1">
                     <li class="nav-item">
-                        <a class="nav-link" href="admin-medicos.html" data-bs-dismiss="offcanvas">
+                        <a class="nav-link" href="admin-medicos.html">
                             <i class="bi bi-person-vcard me-2"></i>Médicos
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="admin-especialidades.html" data-bs-dismiss="offcanvas">
+                        <a class="nav-link active" href="admin-especialidades.html">
                             <i class="bi bi-hospital me-2"></i>Especialidades
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="admin-obras-sociales.html" data-bs-dismiss="offcanvas">
+                        <a class="nav-link" href="admin-obras-sociales.html">
                             <i class="bi bi-shield-plus me-2"></i>Obras sociales
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="admin-turnos.html" data-bs-dismiss="offcanvas">
+                        <a class="nav-link" href="admin-turnos.html">
                             <i class="bi bi-calendar-check me-2"></i>Turnos y reservas
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="usuarios.html" data-bs-dismiss="offcanvas">
+                        <a class="nav-link" href="usuarios.html">
                             <i class="bi bi-people me-2"></i>Usuarios
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html" data-bs-dismiss="offcanvas">
+                        <a class="nav-link" href="index.html">
                             <i class="bi bi-box-arrow-up-right me-2"></i>Ver sitio
                         </a>
                     </li>
