ajustes de estilos en staff (tipografía, tamaños y centrado en mobile); corrige link del cta en home y actualiza footer

--- a/index.html
+++ b/index.html
@@ -54,13 +54,15 @@
         <li class="nav-item"><a class="nav-link text-primary" href="contacto.html">Contacto</a></li>
         <li class="nav-item"><a class="nav-link text-primary" href="faq.html">FAQ</a></li>
         <li id="btnInicio" class="nav-item">
-          <a class="nav-link" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#loginModal" title="Iniciar sesión">
+          <a class="nav-link" style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#loginModal"
+            title="Iniciar sesión">
             <i class="bi bi-box-arrow-in-right fs-2 text-success"></i>
           </a>
         </li>
         <!-- menú usuario logueado -->
-         <li class="dropdown d-none" id="menuUsuario">
-          <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+        <li class="dropdown d-none" id="menuUsuario">
+          <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" role="button" data-bs-toggle="dropdown"
+            aria-expanded="false">
             <i class="bi bi-person-circle text-primary fs-5 me-2"></i>
             <span id="nombreUsuario"></span>
           </a>
@@ -99,8 +101,8 @@
         <li class="nav-item"><a class="nav-link text-primary" href="institucional.html">Institucional</a></li>
         <li class="nav-item"><a class="nav-link text-primary" href="contacto.html">Contacto</a></li>
         <li class="nav-item"><a class="nav-link text-primary" href="faq.html">FAQ</a></li>
-        <li id="adminMedMob" class="nav-item d-none"><a class="nav-link text-primary"
-            href="admin-medicos.html">Panel Admin</a></li>
+        <li id="adminMedMob" class="nav-item d-none"><a class="nav-link text-primary" href="admin-medicos.html">Panel
+            Admin</a></li>
         <li id="btnTurnosMob" class="nav-item d-none"><a class="nav-link text-primary"
             href="sacar-turno.html">Turnos</a></li>
         <li class="nav-item d-flex justify-content-center" id="btnInicioMob">
@@ -156,8 +158,8 @@
         <div class="bg-white bg-opacity-75 rounded-3 text-center mx-auto p-3 p-md-4 panel-hero">
           <h2 class="fw-bolder text-primary fs-5 mb-2">Tu salud a un clic de distancia</h2>
           <p class="fw-semibold text-primary mb-3">Reservá tus turnos médicos de forma rápida y sencilla</p>
-          <!-- CTA actualizado: lleva a contacto -->
-          <a href="contacto.html" class="btn btn-success fw-semibold">Reservar turno</a>
+          <!-- CTA turnos -->
+          <a href="sacar-turno.html" class="btn btn-success fw-semibold">Reservar turno</a>
         </div>
       </div>
     </section>
@@ -167,17 +169,17 @@
       <header class="mb-3">
         <div class="row align-items-center g-2">
           <div class="col-12 col-md-auto">
-            <h2 class="h4 m-0">Nuestro equipo</h2>
+            <h2 class="m-0 fs-5 fs-lg-4 text-center text-lg-start">Nuestro equipo</h2>
           </div>
 
           <div class="col-12 col-md">
             <div class="row g-2">
               <div class="col-12 col-md-8 col-lg-9">
-                <input id="busqueda" type="search" class="form-control form-control-lg"
+                <input id="busqueda" type="search" class="form-control form-control-lg fs-6 fs-lg-5"
                   placeholder="Buscar por nombre o especialidad">
               </div>
               <div class="col-12 col-md-4 col-lg-3">
-                <select id="filtroEspecialidad" class="form-select form-select-lg">
+                <select id="filtroEspecialidad" class="form-select form-select-lg fs-6 fs-lg-5">
                   <option value="">Todas las especialidades</option>
                 </select>
               </div>
@@ -268,7 +270,7 @@
     <div class="container">
       <div class="row gy-3 align-items-center">
         <div class="col-12">
-          <p class="m-0 fw-bold small">© 2025 IDW S.A. · Proyecto académico (tercera entrega)</p>
+          <p class="m-0 fw-bold small">© 2025 IDW S.A. · Proyecto académico (entrega final)</p>
         </div>
 
         <div class="col-12">
