actualiza seed de agenda y turnos, corrige boton cancelar en admin-turnos y vuelve a poner el style in line display: none por si las dudas

--- a/admin-obras-sociales.html
+++ b/admin-obras-sociales.html
@@ -13,7 +13,7 @@
 
 <body>
   <!-- Contenedor principal -->
-  <div id="contenido" class="d-flex flex-column min-vh-100">
+  <div id="contenido" class="d-flex flex-column min-vh-100" style="display: none;">
     <!-- Topbar -->
     <header class="navbar bg-white border-bottom sticky-top">
       <div class="container-fluid">
