me quede ciego pero esta hermoso

--- a/admin-turnos.html
+++ b/admin-turnos.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="d-flex flex-column min-vh-100">
-  <div id="contenido" style="display: none;">
+  <div id="contenido" class="d-none">
     <!-- Topbar -->
     <header class="navbar bg-white border-bottom sticky-top">
       <div class="container-fluid">
