--- a/institucional.html
+++ b/institucional.html
@@ -47,6 +47,7 @@
         <li class="nav-item">
           <a class="nav-link text-primary" href="index.html">Home</a>
         </li>
+        <li id="turnosDesk" class="nav-item"><a class="nav-link text-primary" href="sacar-turno.html">Turnos</a></li>
         <li class="nav-item">
           <a class="nav-link active fw-semibold text-success" href="institucional.html"
             aria-current="page">Institucional</a>
@@ -96,6 +97,7 @@
         <li class="nav-item">
           <a class="nav-link text-primary" href="index.html">Home</a>
         </li>
+        <li id="btnTurnosMob" class="nav-item"><a class="nav-link text-primary" href="sacar-turno.html">Turnos</a></li>
         <li class="nav-item">
           <a class="nav-link active fw-semibold text-success" href="institucional.html"
             aria-current="page">Institucional</a>
