--- a/admin-medicos.html
+++ b/admin-medicos.html
@@ -15,7 +15,7 @@
   </head>
 
   <body>
-    <div id="contenido" style="display: none;">
+    <div id="contenido" class="d-none">
       <!-- Header -->
       <header class="navbar bg-white border-bottom sticky-top">
         <div class="container-fluid">
