--- a/contacto.html
+++ b/contacto.html
@@ -45,6 +45,8 @@
             <!-- menú en desktop -->
             <ul class="navbar-nav ms-auto d-none d-lg-flex align-items-lg-center gap-lg-3 m-0">
                 <li class="nav-item"><a class="nav-link text-primary" href="index.html">Home</a></li>
+                <li id="turnosDesk" class="nav-item"><a class="nav-link text-primary" href="sacar-turno.html">Turnos</a></li>
+
                 <li class="nav-item"><a class="nav-link text-primary" href="institucional.html">Institucional</a></li>
                 <li class="nav-item"><a class="nav-link active fw-semibold text-success" href="contacto.html"
                         aria-current="page">Contacto</a>
@@ -87,6 +89,7 @@
         <div class="offcanvas-body">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link text-primary" href="index.html">Home</a></li>
+                <li id="btnTurnosMob" class="nav-item"><a class="nav-link text-primary" href="sacar-turno.html">Turnos</a></li>
                 <li class="nav-item"><a class="nav-link text-primary" href="institucional.html">Institucional</a></li>
                 <li class="nav-item"><a class="nav-link active fw-semibold text-success" href="contacto.html"
                         aria-current="page">Contacto</a></li>
