--- a/sacar-turno.html
+++ b/sacar-turno.html
@@ -18,6 +18,7 @@
 
     <!-- Estilos -->
     <link rel="stylesheet" href="css/styles.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 
 <body class="d-flex flex-column min-vh-100" data-page="sacar-turno">
@@ -47,6 +48,30 @@
                 <li class="nav-item"><a class="nav-link text-primary" href="institucional.html">Institucional</a></li>
                 <li class="nav-item"><a class="nav-link text-primary" href="contacto.html">Contacto</a></li>
                 <li class="nav-item"><a class="nav-link text-primary" href="faq.html">FAQ</a></li>
+                <!-- menú usuario logueado -->
+                <li class="dropdown d-none" id="menuUsuario">
+                    <a class="nav-link dropdown-toggle d-flex align-items-center" href="#" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="bi bi-person-circle text-primary fs-5 me-2"></i>
+                        <span id="nombreUsuario"></span>
+                    </a>
+
+                    <ul class="dropdown-menu dropdown-menu-end">
+                        <li id="adminMed" class="d-none">
+                            <a class="dropdown-item" href="admin-medicos.html">
+                                <i class="bi bi-gear fs-6 text-black"></i> Panel Admin</a>
+                        </li>
+                        <li id="turnosDropdown" class="">
+                            <a class="dropdown-item" href="sacar-turno.html">
+                                <i class="bi bi-calendar-event text-black"></i> Turnos</a>
+                        </li>
+                        <li id="btnCierre">
+                            <a class="dropdown-item" style="cursor: pointer;">
+                                <i class="bi bi-box-arrow-right fs-6 text-danger"></i> Cerrar sesión
+                            </a>
+                        </li>
+                    </ul>
+                </li>
                 <!-- Dejar visible o quitar el acceso al admin -->
                 <!-- <li class="nav-item"><a class="nav-link text-primary" href="admin-medicos.html">Admin</a></li> -->
             </ul>
@@ -75,6 +100,18 @@
         <h2 class="h3 mb-3">Reservá tu turno</h2>
 
         <div class="row g-3">
+            <!--Nombre-->
+            <div class="col-md-4">
+                <label class="form-label" for="nombre">Nombre</label>
+                <input id="nombre" type="text" class="form-control mb-2" placeholder="Ingrese su Nombre" required>
+            </div>
+
+            <!--Apellido-->
+            <div class="col-md-4">
+                <label class="form-label" for="apellido">Apellido</label>
+                <input id="apellido" type="text" class="form-control mb-2" placeholder="Ingrese su Apellido" required>
+            </div>
+
             <!-- Especialidad -->
             <div class="col-md-4">
                 <label class="form-label" for="selectEspecialidad">Especialidad</label>
@@ -122,7 +159,7 @@
         </div>
 
         <!-- Mis turnos -->
-        <section class="mt-4">
+        <section id="misTurnos" class="mt-4 d-none">
             <h2 class="h5">Mis turnos</h2>
             <div class="table-responsive">
                 <table class="table table-striped align-middle">
@@ -133,6 +170,7 @@
                             <th>Médico</th>
                             <th>Obra social</th>
                             <th>Monto</th>
+                            <th>Estado</th>
                             <th class="text-end">Acciones</th>
                         </tr>
                     </thead>
@@ -181,6 +219,8 @@
 
     <!-- Página de reserva -->
     <script src="js/sacar-turno.js" defer></script>
+
+    <script src="js/navbar.js" type="module"></script>
 </body>
 
 </html>
