--- a/index.html
+++ b/index.html
@@ -174,13 +174,20 @@
 
           <div class="col-12 col-md">
             <div class="row g-2">
-              <div class="col-12 col-md-8 col-lg-9">
+              <div class="col-12 col-md-6 col-lg-6">
                 <input id="busqueda" type="search" class="form-control form-control-lg fs-6 fs-lg-5"
-                  placeholder="Buscar por nombre o especialidad">
+                  placeholder="Buscar por nombre">
               </div>
-              <div class="col-12 col-md-4 col-lg-3">
+
+              <div class="col-12 col-md-3 col-lg-3">
                 <select id="filtroEspecialidad" class="form-select form-select-lg fs-6 fs-lg-5">
                   <option value="">Todas las especialidades</option>
+                </select>
+              </div>
+
+              <div class="col-12 col-md-3 col-lg-3">
+                <select id="filtroObraSocial" class="form-select form-select-lg fs-6 fs-lg-5">
+                  <option value="">Todas las obras sociales</option>
                 </select>
               </div>
             </div>
