agrego opciones desplegables de especialidades en el form

--- a/admin-medicos.html
+++ b/admin-medicos.html
@@ -207,13 +207,11 @@
                         <label for="especialidad" class="form-label fw-bold"
                           >Especialidad</label
                         >
-                        <input
-                          type="text"
-                          class="form-control"
-                          id="especialidad"
-                          required
-                        />
+                        <select class="form-select" id="especialidad" required>
+                          <option value="">Seleccionar</option>
+                        </select>
                       </div>
+
                       <div class="col-md-4">
                         <label for="valorConsulta" class="form-label fw-bold"
                           >Valor Consulta ($)</label
