acomode el navbar de turnos y el nombre de la calle en faqs

--- a/faq.html
+++ b/faq.html
@@ -163,7 +163,7 @@
                                             <div>
                                                 <h4 class="h6 fw-bold text-primary mb-1">¿Dónde se encuentra la clínica?
                                                 </h4>
-                                                <p class="mb-0">Calle Cualquiera 1234, Concordia, Entre Ríos, Argentina.
+                                                <p class="mb-0">Calle Falsa 123, Concordia, Entre Ríos, Argentina.
                                                 </p>
                                             </div>
                                             <div>
