--- a/sacar-turno.html
+++ b/sacar-turno.html
@@ -45,6 +45,7 @@
             <!-- menú en desktop -->
             <ul class="navbar-nav ms-auto d-none d-lg-flex align-items-lg-center gap-lg-3 m-0">
                 <li class="nav-item"><a class="nav-link text-primary" href="index.html">Home</a></li>
+                <li id="turnosDesk" class="nav-item"><a class="nav-link active fw-semibold text-success" href="sacar-turno.html" aria-current="page">Turnos</a></li>
                 <li class="nav-item"><a class="nav-link text-primary" href="institucional.html">Institucional</a></li>
                 <li class="nav-item"><a class="nav-link text-primary" href="contacto.html">Contacto</a></li>
                 <li class="nav-item"><a class="nav-link text-primary" href="faq.html">FAQ</a></li>
@@ -86,6 +87,9 @@
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link text-primary" href="index.html">
                     <i class="bi bi-house"></i> Home</a></li>
+                <li class="nav-item"><a class="nav-link active fw-semibold text-success" href="index.html" aria-current="page">
+                    <i class="bi bi-calendar2-event"></i> Turnos</a>
+        </li>
                 <li class="nav-item"><a class="nav-link text-primary" href="institucional.html">
                     <i class="bi bi-buildings"></i> Institucional</a></li>
                 <li class="nav-item"><a class="nav-link text-primary" href="contacto.html">
@@ -201,7 +205,7 @@
         <div class="container">
             <div class="row gy-3 align-items-center">
                 <div class="col-12">
-                    <p class="m-0 fw-bold small">© 2025 IDW S.A. · Proyecto académico (tercera entrega)</p>
+                    <p class="m-0 fw-bold small">© 2025 IDW S.A. · Proyecto académico (entrega final)</p>
                 </div>
                 <div class="col-12">
                     <nav class="d-flex align-items-center gap-3 flex-wrap justify-content-center">
